<resources>
    <string name="app_name">BEAUTY STUFF</string>
    <string name="customer">Customer</string>
    <string name="pharmacist">Pharmacist</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="already_have_account_login_here">Already have account? Login Here</string>
    <string name="not_have_account_register_here">Not have account? Register Here</string>
    <string name="customer_login">Customer Login</string>
    <string name="customer_register">Customer Register</string>
    <string name="pharmacist_login">Pharmacist Login</string>
    <string name="pharmacist_register">Pharmacist Register</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="_email">Email</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="phone_no">Phone no.</string>
    <string name="my_profile">Profile</string>
    <string name="edit_profile">Edit/Update profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="shopping">Shopping</string>
    <string name="newsletter">Newsletter</string>
    <string name="user_profile">User profile</string>
    <string name="products">Products</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="services">Services</string>
    <string name="promotion">Promotion</string>
    <string name="pickup">Pickup</string>
    <string name="enquiry">Enquiry</string>
    <string name="consultation">Consultation</string>
    <string name="consultation_description">Wahdah pharmacist also seek ways to encourage patients to learn about their treatment and to be involved as active partners in their care. Our pharmacists play a central role in ensuring medication safety and compliance across the continuum of care.</string>
    <string name="blood_pressure_check">Blood Pressure check</string>
    <string name="blood_pressure_check_desc">If you think you might be at risk of high blood pressure or you simply haven’t had it checked in a while, you can get a blood pressure check at our pharmacy.</string>
    <string name="cholesterol_testing">Cholesterol testing</string>
    <string name="cholesterol_testing_desc">"Maintaining a healthy level of cholesterol is vital for good health and your Wahdah pharmacy is an excellent place to visit to test your cholesterol levels. "</string>
    <string name="glucose_testing">Glucose Testing</string>
    <string name="glucose_testing_desc">Ask your Wahdah pharmacist for a special blood glucose monitor that will help you share your monitoring details with your pharmacist.</string>
    <string name="complaints">Complaints</string>
    <string name="contact_us">Contact us</string>
    <string name="facebook">Facebook</string>
    <string name="view_bookings">View Bookings</string>
    <string name="set_visited">Set Visited</string>
    <string name="promotions">Promotions</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in lacus est. Duis sodales ex odio, a tempor orci interdum vel. Vivamus nec erat ligula. Vivamus felis tellus, pretium a ipsum id, imperdiet ultricies est. Nullam consectetur dapibus dui, ut iaculis nunc sollicitudin ut. Donec sodales luctus magna. Aenean scelerisque diam nec porttitor molestie. Suspendisse sit amet massa eget mi elementum aliquam. Vestibulum suscipit enim mi, at semper nunc eleifend a. Integer elementum sagittis purus, vel feugiat tellus pellentesque quis. Cras tempus erat sit amet ornare commodo. Curabitur finibus luctus metus.</string>
    <string name="date">02-Mar-2021</string>
    <string name="read_more"><u>Read More....</u></string>
    <string name="promotion_details">Promotion Details</string>
    <string name="edit_promo">Edit Promo</string>
    <string name="add_promo">Add Promo</string>
    <string name="pick_image">Pick Image</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="_3424041675">3424041675</string>
    <string name="product">Product</string>
    <string name="rm_25_5">rm 25.0</string>
    <string name="buy">Buy</string>
    <string name="price">Price</string>
    <string name="_1">1</string>
    <string name="buy_now">Buy now</string>
    <string name="enter_payment_details">Enter Payment Details</string>
    <string name="view_orders">View Orders</string>
    <string name="late">Late</string>
    <string name="order_status">Order Status</string>
    <string name="_2_days_3hours">2 days 3 hrs</string>
    <string name="completed_on">Complete On</string>
    <string name="order_from">Order From</string>
    <string name="abdullah_k">Abdullah khan</string>
    <string name="placed_on">Placed On</string>
    <string name="orderid">OrderId</string>
    <string name="my_orders">My Orders</string>
    <string name="add_complaint">Add complaint</string>
    <string name="product_name">Product Name</string>
    <string name="lot_no">Lot No.</string>
    <string name="mfg_date">Manufacturing Date</string>
    <string name="exp_date">Expiry date</string>
    <string name="reason">Reason</string>
    <string name="complaint_id">Complaint Id</string>
    <string name="complaint_on">Complaint For</string>
    <string name="delete">Delete</string>
    <string name="edit_complaint">Edit Complaint</string>
    <string name="edit_service">Edit Service</string>
    <string name="add_service">Add Service</string>
    <string name="health_info">Health Info</string>
    <string name="youtube_video_link">Youtube Video Link</string>
    <string name="add_healthInfo">Add Health Info</string>
    <string name="edit_healthInfo">Edit Health Info</string>
    <string name="edit_product">Edit Product</string>
    <string name="add_product">Add Product</string>
    <string name="edit_contact_us">Edit Contact Us</string>
    <string name="pharmacy_phone">0126362121</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="pharmacy_address">Wahdah Pharmacy, 813 Jalan KK 4B/2, Kota Bharu, Malaysia</string>
    <string name="pharmacy_fb_link">https://www.facebook.com/Wahdah-Pharmacy-PLT-213571962659875/</string>
    <string name="chat_history">Chat History</string>
    <string name="chat">Chat</string>
    <string name="please_wait">Please Wait</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="total_price">Total Price:</string>
    <string name="rm_0_00">RM 0.00</string>
    <string name="price_rm_25_0">RM 25.0</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="pending">Pending</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="link_to_google_Calender">Link to google calendar</string>
    <string name="orders">Orders</string>
    <string name="add_reminder_event">Add reminder event</string>
</resources>