<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_pink"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.customer.activities.AddComplaint">

    <include
        android:id="@+id/add_complaint_toolbar"
        layout="@layout/toolbar_layout" />
    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/add_complaint_category_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_complaint_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/add_complaint_product_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/add_complaint_category_spinner"
        android:hint="@string/product_name"
        />
    <EditText
        android:id="@+id/add_complaint_product_lot_number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:visibility="gone"
        android:inputType="number"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/add_complaint_product_name_et"
        android:hint="@string/lot_no"
        />
    <EditText
        android:id="@+id/add_complaint_product_mfg_date_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/add_complaint_product_lot_number_et"
        android:hint="@string/mfg_date"
        />
    <EditText
        android:id="@+id/add_complaint_product_exp_date_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:inputType="date"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/add_complaint_product_mfg_date_et"
        android:hint="@string/exp_date"
        />
    <EditText
        android:id="@+id/add_complaint_reason_et"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:minLines="3"
        app:layout_constraintTop_toBottomOf="@id/add_complaint_product_exp_date_et"
        android:hint="@string/reason"
        />

    <Button
        android:id="@+id/add_complaint_btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorButtonNormal"
        android:text="@string/add_complaint"
        android:paddingHorizontal="10dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_complaint_reason_et" />
</androidx.constraintlayout.widget.ConstraintLayout>